--- a/tasks/repo-disable.yml
+++ b/tasks/repo-disable.yml
@@ -12,5 +12,14 @@
     warn: false
   with_items:
     - yum config-manager --set-disabled PowerTools
+  when:
+    - ansible_distribution_major_version|int == 8
+
+- name: yum clean
+  command:
+    cmd: >
+      {{ item }}
+    warn: false
+  with_items:
     - yum clean all
     - yum makecache
